public/css/site.css
h1, h2, h3, h4 {
    font-family: 'Cardo', arial, serif;
}

a {
    color: #676767;
}

kbd, code {
    font-family: 'Droid Sans Mono', mono;
}

kbd {
    font-weight: bold;
}

code.hl {
    background-color: #E6E6E6;
}

p, dt {
    font-family: 'Libre Baskerville', serif;
}

header {
    margin-bottom: 1em;
    background-color: #FFFFFF;
    border-bottom: 2px solid #BCB2AB;

}

header .logo {
    vertical-align: middle;
    margin-top: 16px;
}

header .main_title {
    font-family: Cardo;
    font-size: 1.8em;
    font-style: oblique;
    vertical-align: top;
}

nav#menu {
    margin-top: 36px;
    font-family: "Cardo", arial, serif;
    font-weight: bold;
    text-align: center;
}

nav#menu li {
    display: inline;
    padding-left: 2em;
    list-style: none;
}

nav#menu li a {
    padding-top: 7px;
    color: #7b7b7b;
    font-size: 11px;
    text-decoration: none;
    text-transform: uppercase;
    letter-spacing: 1px;
    border: 0;
}

nav#menu li a:hover {
    border-top: 3px solid #BCB2AB;
    color: #a7a19d;
}

/*

nav#main li.current-menu-item a, nav#main li.current-menu-parent a {
    border-top:3px solid #f87f53;
    color:#a7a19d;
}

 */

.divider {
    border-top: 1px dotted #676767;
}

footer.columns {
    margin-top: 1em;
    border-top: 1px dotted #676767;
    padding-top: 1em;
}

.footer h4 {
    font-size: 1.5em;
    text-align: left;
}

.footer .copyright {
    margin-top: 0.5em;
    text-align: center;
    font-size: 80%;
}

.content, .sidebar {
    background-color: #FFFFFF;
    padding: 1em 0;
}

.spacer {
    height: 1em;
}

.content {
    overflow: auto;
}

.content ul {
    list-style-type: disc;
    list-style-position: inside;
    margin-left: 0;
    padding-left: 1em;
    text-indent: -1em;
}

.sidebar ul {
    list-style-type: none;
}

article.resume section {
    clear: both;
}

dl.resume dt {
    clear: both;
    float: left;
    width: 33%;
    border-top: 1px dotted #676767;
    padding-top: 3px;
    padding-bottom: 0.5em;
    font-family: 'Cardo', arial, serif;
    font-size: 1.2em;
    font-weight: bold;
}

dl.resume dd {
    float:left;
    width:66%;
    border-top: 1px dotted #676767;
    padding-top: 3px;
    padding-bottom: 0.5em;
}

dl.resume dd p.metadata {
    font-style: oblique;
}

.mobile {
    text-align: center;
}

.home.alpha {
    margin-right: -1px;
    border-right: 1px dotted #676767;
}

.home.middle {
    text-align: center;
}

.home.omega {
    margin-left: -1px;
    padding-left: 1em;
    border-left: 1px dotted #676767;
}

aside.home .block {
    height: 100%;
    padding-left: 1em;
    border-left: 1px dotted #676767;
}

#tweets {
    min-height: 250px;
    height: auto !important;
    height: 250px;
}

sup {
    font-size: 75%;
    vertical-align: super;
}

.h-card {
    display: none;
}

